# lsp-textdocument

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: with_lsp_server.rs
src/: lib.rs  text_document.rs  text_documents.rs
