[package]
name = "lsp-textdocument"
version = "0.1.0"
edition = "2021"
authors = ["qixuan"]
description = "a textdocument manager in lsp communication"
readme = "README.md"

[dependencies]
anyhow = "1.0.66"
lsp-types = "0.93.2"
serde_json = "1.0"

[dev-dependencies]
lsp-server = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
