[package]
name = "lsp-textdocument"
version = "0.2.5"
edition = "2021"
authors = ["qixuan"]
description = "A LSP text documents manager that map of text document."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GiveMe-A-Name/lsp-textdocument"
repository = "https://github.com/GiveMe-A-Name/lsp-textdocument"

[dependencies]
lsp-types = "0.93.2"
serde_json = "1.0"

[dev-dependencies]
anyhow = "1"
lsp-server = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
